[package]
name = "polytope"
version = "0.1.0"
authors = ["cohyou"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "polytope"

[[bin]]
name = "polytope_repl"
path = "src/main.rs"

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.3.2"
askama = "0.10.5"
indexmap = "1.6.0"
thiserror = "1.0.23"
